--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
 
 <div id="main">
 	<div class="container">
+	<div class="row">
+	<div class="col s12 top center">
+		<img class="image-on-top" src="images/logo-1000-px.png">
+	</div>
+	</div>
 		<div class="row">
-			<div class="col s12 top">
+			<div class="col s12">
 				<div class="title">
 					<h4 class="text-title center">Rekrutmen Terbuka<br>Staf Tim MWA WM 2017</h4>
 				</div>
