--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col s12 top center">
-					<img class="image-on-top" src="images/logo-1000-px.png"></div>
+					<img class="responsive-img image-on-top" src="images/logo-1000-px.png"></div>
 			</div>
 			<div class="row">
 				<div class="col s12">
@@ -68,8 +68,8 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col s12 organogram center">
-					<img class="image-on-top" src="images/organogram.jpg"></div>
+				<div class="col s12 center">
+					<img class="responsive-img image-on-top" src="images/organogram.jpg"></div>
 			</div>
 			<div class="row">
 				<div class="col s12">
