--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<img class="responsive-img image-on-top" src="images/organogram.jpg"></div>
 			</div>
 			<div class="row">
-				<div class="col s12">
+				<!-- <div class="col s12">
 					<div class="card cyan lighten-2">
 						<div class="card-content white-text">
 							<span class="card-title">Divisi Manajemen Sumber Daya Anggota</span>
@@ -83,7 +83,7 @@
 							</p>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="col s12">
 					<div class="card yellow lighten-2">
 						<div class="card-content black-text">
