--- a/index.html
+++ b/index.html
@@ -49,138 +49,14 @@
 			</div>
 			<hr>
 			<div class="row">
+				<div class="col s12 center">
+					<img class="responsive-img image-ojan" src="images/ojan.png"><br>
+					<span style="font-weight: bold;">Fauzan Makarim (TM'13) - PJS MWA WM 2017/2018</span></div>
 				<div class="col s12">
-					<p style="text-align: justify;">
-						Majelis Wali Amanat (MWA) merupakan organ tertinggi di ITB yang menyusun dan menetapkan kebijakan umum ITB serta mengawasi pelaksanaannya. MWA berisi wakil-wakil dari setiap stakeholder yang berkaitan dengan ITB mulai dari kementerian, gubernur, hingga mahasiswa. Satu mahasiswa yang mewakili 24.000 mahasiswa S1, S2, S3, hingga keprofesian hadir untuk menyuarakan aspirasi mahasiswa. Wakil itulah yang biasa disebut MWA Wakil Mahasiswa (MWA WM).
-						<br>
-						<br>
-						Dalam memperjuangkan aspirasi ribuan mahasiswa tidaklah mungkin dilakukan sendirian oleh MWA WM, diperlukan tim MWA WM yang membantu keberjalanan perwakilan mahasiswa di MWA. Tim MWA WM hadir sebagai pionir-pionir penyokong perjuangan aspirasi mahasiswa di tingkat strategis ITB. Berdiri dengan kokoh empat pilar departemen penyokong MWA WM yaitu Kesekjenan yang menata internal tim, Departemen Riset sebagai pemikir pencari solusi, Departemen Relasi si penghubung, dan Departemen Media pengatur layar yang beraksi dibalik layar.
-						<br>
-						<br>
-						Memangnya apa aja nih yang dibahas di tingkat strategis ITB? Banyak. Mulai dari pembukaan fakultas baru, pengelolaan dana di ITB, kebijakan multikampus, sampai perencanaan pengembangan ITB kedepannya. Pionir yang siap untuk berkontribusi kepada mahasiswa dan ITB, demi tercapainya masa depan yang lebih baik, kamu kah orangnya?
+					<p style="text-align: center; font-size: 1.25rem;">
+						"Mari bergabung dengan tim PJS MWA WM ITB. Tim spesial yang berperan dalam mengawal isu strategis kampus. Satu-satunya tim yang paling dekat dengan bos bos senat akademik, MWA, dan rektorat. Dan tim yang berjuang untuk kampus ITB yang lebih baik."
 					</p>
 				</div>
-			</div>
-			<hr>
-			<div class="row">
-				<div class="col s12">
-					<h5>Berkenalan yuk dengan divisinya</h5>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col s12 center">
-					<img class="responsive-img image-on-top" src="images/organogram.jpg"></div>
-			</div>
-			<div class="row">
-				 <div class="col s12">
-					<div class="card cyan lighten-2">
-						<div class="card-content white-text">
-							<span class="card-title">Divisi Manajemen Sumber Daya Anggota</span>
-							<p>
-								Ngapain sih ikutan MSDA? Gausah lah. Tapi kalau kamu tertarik untuk me- <i>manage</i>
-								anggota tim MWA WM apalagi me- <i>manage</i>
-								MWA WM-nya itu sendiri terutama mau tau kabar terkini anggota tim, yuk gabung. Tempat sangat terbatas loh!
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col s12">
-					<div class="card yellow lighten-2">
-						<div class="card-content black-text">
-							<span class="card-title">Divisi Relasi S1 Ganesha</span>
-							<p>
-								Kamu pasti udah tau dong peran MWA WM dalam kemahasiswaan ITB? Sebagai representasi mahasiswa dalam ranah penentu kebijakan ITB yang memiliki porsi sama besar dengan rektor maupun gubernur, tentu  harus ada pihak yang menjadi penghubung langsung antara pihak MWA WM dengan massa kampus Ganesha. Nah, kalau kamu tertarik menjadi penghubung ini, ingin memperlancar skill komunikasi sekaligus mendalami peran MWA WM, kamu cocok banget buat masuk divisi ini! Tidak hanya itu, kamu juga bisa nambah banyak kenalan dari berbagai lembaga di ITB Ganesha, dan jadi yang paling up-to-date dengan perkembangan kebijakan kampus!
-							</p>
-							</span>
-						</div>
-					</div>
-				</div>
-				<div class="col s12">
-					<div class="card yellow lighten-2">
-						<div class="card-content black-text">
-							<span class="card-title">Divisi Relasi Jatinangor</span>
-							<p>
-								Nah tidak hanya di ITB Ganesha. Buat teman-teman di ITB Jatinangor juga ada nih. Teman-teman di ITB Jatinangor juga bisa bergabung di Divisi Relasi Jatinangor. Divisi ini akan bekerja untuk menyampaikan segala informasi yang berkaitan tentang isu isu yang dibahas oleh MWA WM tentang ITB kepada mahasiswa di Jatinangor. Jadi, kami tunggu kamu di divisi ini.
-							</p>
-							<br>
-							<span>
-								<b>Syarat: Khusus mahasiswa S1 ITB Jatinangor</b>
-							</span>
-						</div>
-					</div>
-				</div>
-				<div class="col s12">
-					<div class="card yellow lighten-2">
-						<div class="card-content black-text">
-							<span class="card-title">Divisi Relasi Tahap Persiapan Bersama</span>
-							<p>
-								Pengen relasi banyak? Suka lihat dede-dede emesh? Gabung sama kita di divisi relasi TPB karena kami adalah jawaban kegaluan kamu-kamu semua. Banyak temen, eksis di depan maba, softskill oke. Enak bet kan? Kali aja jodoh kalian adalah anak TPB loo.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col s12">
-					<div class="card yellow lighten-2">
-						<div class="card-content black-text">
-							<span class="card-title">Divisi Relasi Pascasarjana dan Humas</span>
-							<p>
-								Temen kamu cuma di kampus doang? Pengen nambah relasi? Kamu tau gak sih kalo pascasarjana itu ada himpunannya juga? Terus kamu tau gak sih organ-organ ITB itu apa aja? Tau gak sih kalo MWA WM itu limited edition gak ada di semua kampus? Bisa banget nih kepo-kepo dengan masuk divisi ini! Bisa dapet kenalan mahasiswa pascasarjana, bisa juga jadi kenal lebih dekat dengan rektorat, sarana prasarana, K3L, dan lainnya, juga bisa kenal sama MWA WM dari kampus lain juga. Cocok banget buat kamu yang pengen nambah relasi dari banyak kalangan, yuk gabung divisi ini.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col s12">
-					<div class="card yellow darken-3">
-						<div class="card-content white-text">
-							<span class="card-title">Divisi Kajian Strategis</span>
-							<p>
-								Suka ngopi sambil diskusi? Suka baca buku ataupun dokumen? atau suka JKT48? Tidak masalah apa kesukaanmu yuk gabung di Divisi Kajian Strategis! Di sini kamu bakal belajar untuk mengkaji dan menganalisis isu strategis kampus yg sedang berkembang, menyelesaikan suatu permasalahan, bahkan hingga menyelamatkan dunia! Jadi, tunggu apa lagi! Kajian strategis? Saik abis~
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col s12">
-					<div class="card yellow darken-3">
-						<div class="card-content white-text">
-							<span class="card-title">Divisi Analisis Data dan Aspirasi</span>
-							<p>
-								Sering dicurhatin temen? Penasaran sama bayaran asli uang kuliah kamu? Pengen tau jumlah pintu yang ada di ITB? Kalo gitu kamu cocok banget masuk divisi ini!! Soalnya, nanti kamu bakal berurusan dengan yg namanya data dan angka seputar ITB! Wow emejing kan? Selain itu, kamu juga bakal jadi temen curhatnya KM ITB soal isu-isu kampus yg lagi hot loh. Yuk gabung! Pusat analisis data dan aspirasi? Sabi~
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col s12">
-					<div class="card orange darken-4">
-						<div class="card-content white-text">
-							<span class="card-title">Divisi Publikasi Dalam Jaringan</span>
-							<p>
-								Tau informasi seputar MWA WM darimana? Media sosial dan website. Kalo mau memberikan aspirasi kemana? Media sosial dan website. Yuk sama-sama belajar mengemas informasi MWA WM menjadi lebih oke, lebih menarik, lebih asik, lebih <em>catchy</em>
-								, lebih informatif, lebih WAW! Yuk sama-sama menerima aspirasi massa kampus. Lumayan bisa jadi temen chat kalo-kalo kamu lagi kesepian.
-								<br>Tidak sabar bertemu dengan kalian ;)</p>
-						</div>
-					</div>
-				</div>
-				<div class="col s12">
-					<div class="card orange darken-4">
-						<div class="card-content white-text">
-							<span class="card-title">Divisi Publikasi Luar Jaringan</span>
-							<p>
-								Suka denger gak sih orang-orang nanya "MWA WM itu apa sih? MWA WM ngapain sih kerjanya?" Nah, ini divisi yang cocok buat kamu yang mau jadi orang pertama buat menjawab itu semua! Di divisi ini kamu bakal mempropagandakan MWA-WM ke penjuru kampus ITB! Penasaran kan gimana caranya? Yuk join dijamin bakal seru!!
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col s12">
-					<div class="card orange darken-4">
-						<div class="card-content white-text">
-							<span class="card-title">Divisi Kreasi Visual</span>
-							<p>
-								Penasaran gak sih sama bikin branding, konten visual dan tahap2 mendesain grafis? Ayo masuk ke divisi grafis dimana kita bekerja untuk memvisualisasikan sebuah konten, membuat logo, videografi dan lainnya. Bagi kalian yang ingin membuat portofolio bagus, mempercantik CV, atau penasaran sama desain, serta belajar lebih dalam tentang desain, kami tunggu kamu di divisi ini.
-							</p>
-						</div>
-					</div>
-				</div>
-
 			</div>
 			<div class="row">
 				<div class="col s12">
@@ -264,6 +140,154 @@
 						Boleh menceritakan tentang diri kamu selain data yang sudah kamu isi di atas?
 					</label>
 				</div>
+			</div>
+			<hr>
+			<div class="row">
+				<div class="col s12">
+					<h5>Berkenalan yuk dengan susunan kepengurusannya</h5>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col s12 center">
+					<img class="responsive-img image-organogram" src="images/organogram.jpg"></div>
+			</div>
+			<div class="row">
+				<div class="col s12">
+					<div class="card yellow lighten-2">
+						<div class="card-content black-text">
+							<span class="card-title">Divisi Relasi S1 Ganesha</span>
+							<p>
+								Kamu pasti udah tau dong peran MWA WM dalam kemahasiswaan ITB? Sebagai representasi mahasiswa dalam ranah penentu kebijakan ITB yang memiliki porsi sama besar dengan rektor maupun gubernur, tentu  harus ada pihak yang menjadi penghubung langsung antara pihak MWA WM dengan massa kampus Ganesha. Nah, kalau kamu tertarik menjadi penghubung ini, ingin memperlancar skill komunikasi sekaligus mendalami peran MWA WM, kamu cocok banget buat masuk divisi ini! Tidak hanya itu, kamu juga bisa nambah banyak kenalan dari berbagai lembaga di ITB Ganesha, dan jadi yang paling up-to-date dengan perkembangan kebijakan kampus!<br>
+								N.B.: Mahasiswa TPB boleh masuk kok! :)
+							</p>
+							<span><b>
+								Apa yang akan kamu dapatkan di sini: relasi banyak, ketemu dan ngobrol banyak dengan massa himpunan ITB Ganesha yang beragam, <em>communication skill</em>, kenal semua ketua himpunan ITB Ganesha.
+							</b></span>
+						</div>
+					</div>
+				</div>
+				<div class="col s12">
+					<div class="card yellow lighten-2">
+						<div class="card-content black-text">
+							<span class="card-title">Divisi Relasi Jatinangor</span>
+							<p>
+								Nah tidak hanya di ITB Ganesha. Buat teman-teman di ITB Jatinangor juga ada nih. Teman-teman di ITB Jatinangor juga bisa bergabung di Divisi Relasi Jatinangor. Divisi ini akan bekerja untuk menyampaikan segala informasi yang berkaitan tentang isu isu yang dibahas oleh MWA WM tentang ITB kepada mahasiswa di Jatinangor. Jadi, kami tunggu kamu di divisi ini.<br>
+								N.B.: diutamakan mahasiswa S1 ITB Jatinangor
+							</p>
+							<span><b>
+								Apa yang akan kamu dapatkan di sini: relasi banyak, ketemu dan ngobrol banyak dengan massa himpunan ITB Jatinangor, <em>communication skill</em>, jalan-jalan GANECA-JATINANGOR sesering mungkin.
+							</b></span>
+						</div>
+					</div>
+				</div>
+				<div class="col s12">
+					<div class="card yellow lighten-2">
+						<div class="card-content black-text">
+							<span class="card-title">Divisi Relasi Tahap Persiapan Bersama</span>
+							<p>
+								Pengen relasi banyak? Suka lihat dede-dede emesh? Gabung sama kita di divisi relasi TPB karena kami adalah jawaban kegalauan kamu-kamu semua. Banyak temen, eksis di depan mahasiswa baru, <em>softskill</em> oke. Enak bet kan? Kali aja jodoh kalian adalah anak TPB loo.
+							</p>
+							<span><b>
+								Apa yang akan kamu dapatkan di sini: relasi banyak, ketemu dan ngobrol dengan mahasiswa baru, <em>communication skill</em>, dikenal mahasiswa baru yang <em>emesh-emesh</em>.
+							</b></span>
+						</div>
+					</div>
+				</div>
+				<div class="col s12">
+					<div class="card yellow lighten-2">
+						<div class="card-content black-text">
+							<span class="card-title">Divisi Relasi Pascasarjana dan Humas</span>
+							<p>
+								Temen kamu cuma di kampus aja? Pengen nambah relasi? Kamu tau gak sih kalo pascasarjana itu ada himpunannya juga? Terus kamu tau gak sih organ-organ ITB itu apa aja? Tau gak sih kalo MWA WM itu <em>limited edition</em> gak ada di semua kampus? Bisa banget nih kepo-kepo dengan masuk divisi ini! Bisa dapet kenalan mahasiswa pascasarjana, bisa juga jadi kenal lebih dekat dengan rektorat, sarana prasarana, K3L, dan lainnya, juga bisa kenal sama MWA WM dari kampus lain juga. Cocok banget buat kamu yang pengen nambah relasi dari banyak kalangan, yuk gabung divisi ini.
+							</p>
+							<span><b>
+								Apa yang akan kamu dapatkan di sini: relasi banyak, ketemu kakak-kakak pascasarjana, <em>communication skill</em>, ketemu dan tahu banyak tentang <em>stakeholder</em> kampus, jalan-jalan gratis.
+							</b></span>
+						</div>
+					</div>
+				</div>
+				<div class="col s12">
+					<div class="card cyan lighten-2">
+						<div class="card-content white-text">
+							<span class="card-title">Divisi Manajemen Sumber Daya Anggota</span>
+							<p>
+								Ngapain sih ikutan MSDA? Gausah lah. Tapi kalau kamu tertarik untuk me-<i>manage</i>
+								anggota tim MWA WM apalagi me-<i>manage</i>
+								MWA WM-nya itu sendiri terutama mau tau kabar terkini anggota tim, yuk gabung. Tempat sangat terbatas loh!
+							</p>
+							<span><b>
+								Apa yang akan kamu dapatkan di sini: isu terkini anggota (termasuk gosip), manajemen diri, <em>interpersonal skill</em>.
+							</b></span>
+						</div>
+					</div>
+				</div>
+				<div class="col s12">
+					<div class="card yellow darken-3">
+						<div class="card-content white-text">
+							<span class="card-title">Divisi Kajian Strategis</span>
+							<p>
+								Suka ngopi sambil diskusi? Suka baca buku ataupun dokumen? atau suka JKT48? Tidak masalah apa kesukaanmu yuk gabung di Divisi Kajian Strategis! Di sini kamu bakal belajar untuk mengkaji dan menganalisis isu strategis kampus yg sedang berkembang, menyelesaikan suatu permasalahan, bahkan hingga menyelamatkan dunia! Jadi, tunggu apa lagi! Kajian strategis? Saik abis~
+							</p>
+							<span><b>
+								Apa yang akan kamu dapatkan di sini: isu strategis kampus, ilmu kajian, <em>superpower</em> untuk menyelamatkan dunia.
+						</b></span>
+						</div>
+					</div>
+				</div>
+				<div class="col s12">
+					<div class="card yellow darken-3">
+						<div class="card-content white-text">
+							<span class="card-title">Divisi Analisis Data dan Aspirasi</span>
+							<p>
+								Sering dicurhatin temen? Penasaran sama bayaran asli uang kuliah kamu? Pengen tau jumlah pintu yang ada di ITB? Kalo gitu kamu cocok banget masuk divisi ini!! Soalnya, nanti kamu bakal berurusan dengan yg namanya data dan angka seputar ITB! Wow <em>emejing</em> kan? Selain itu, kamu juga bakal jadi teman curhatnya KM ITB soal isu-isu kampus yg lagi hot loh. Yuk gabung! Pusat analisis data dan aspirasi? Sabi~
+							</p>
+							<span><b>
+							Apa yang akan kamu dapatkan di sini: ilmu analisis data, curhatan isu kampus, data yang beberapa bersifat rahasia.
+						</b></span>
+						</div>
+					</div>
+				</div>
+				<div class="col s12">
+					<div class="card orange darken-4">
+						<div class="card-content white-text">
+							<span class="card-title">Divisi Publikasi Dalam Jaringan</span>
+							<p>
+								Tau informasi seputar MWA WM darimana? Media sosial dan website. Kalo mau memberikan aspirasi kemana? Media sosial dan website. Yuk sama-sama belajar mengemas informasi MWA WM menjadi lebih oke, lebih menarik, lebih asik, lebih <em>catchy</em>, lebih informatif, lebih WAW! Yuk sama-sama menerima aspirasi massa kampus. Lumayan bisa jadi temen chat kalo-kalo kamu lagi kesepian. Tidak sabar bertemu dengan kalian ;)</p>
+								<span><b>
+							Apa yang akan kamu dapatkan di sini: manajemen publikasi <em>online</em>, jadi administrator semua akun media sosial MWA WM.
+						</b></span>
+						</div>
+						
+					</div>
+				</div>
+				<div class="col s12">
+					<div class="card orange darken-4">
+						<div class="card-content white-text">
+							<span class="card-title">Divisi Publikasi Luar Jaringan</span>
+							<p>
+								Suka denger gak sih orang-orang nanya "MWA WM itu apa sih? MWA WM ngapain sih kerjanya?" Nah, ini divisi yang cocok buat kamu yang mau jadi orang pertama buat menjawab itu semua! Di divisi ini kamu bakal mempropagandakan MWA-WM ke penjuru kampus ITB! Penasaran kan gimana caranya? Yuk join dijamin bakal seru!!
+							</p>
+							<span><b>
+							Apa yang akan kamu dapatkan di sini: skill <em>public speaking &amp; marketing</em>, jalan-jalan gratis.
+						</b></span>
+						</div>
+						
+					</div>
+				</div>
+				<div class="col s12">
+					<div class="card orange darken-4">
+						<div class="card-content white-text">
+							<span class="card-title">Divisi Kreasi Visual</span>
+							<p>
+								Penasaran gak sih sama bikin branding, konten visual dan tahap2 mendesain grafis? Ayo masuk ke divisi grafis dimana kita bekerja untuk memvisualisasikan sebuah konten, membuat logo, videografi dan lainnya. Bagi kalian yang ingin membuat portofolio bagus, mempercantik CV, atau penasaran sama desain, serta belajar lebih dalam tentang desain, kami tunggu kamu di divisi ini.
+							</p>
+							<span><b>
+								Apa yang akan kamu dapatkan di sini: workshop Photoshop dan <em>software</em> desain gratis, portofolio desain yang makin banyak, jiwa kreatif dan seni yang <em>beudeeuuh</em>.
+							</b></span>
+						</div>
+					</div>
+				</div>
+
 			</div>
 			<div class="row">
 				<div class="col s12">
