--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="msapplication-tap-highlight" content="no">
-	<meta name="description" content="Rekrutmen Terbuka Staf Tim MWA WM telah dibuka. Daftarkan dirimu dan rasakan ERANyata!">
-	<title>Rekrutmen Terbuka Staf Tim MWA WM 2017</title>
+	<meta name="description" content="Rekrutmen Terbuka Staf Magang Tim MWA WM telah dibuka. Daftarkan dirimu dan rasakan ERANyata!">
+	<title>Rekrutmen Terbuka Staf Magang Tim MWA WM 2017</title>
 
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="css/loader.min.css" rel="stylesheet" type="text/css">
@@ -35,13 +35,13 @@
 					<div class="title">
 						<h4 class="text-title center">
 							Rekrutmen Terbuka
-							<br>Staf Tim MWA WM 2017</h4>
+							<br>Staf Tim Magang MWA WM 2017</h4>
 					</div>
 				</div>
 			</div>
 			<div class="row center">
 				<div class="col s12">
-					<span style="font-size: 1.5rem;"> <b>Selamat datang di portal rekrutmen terbuka Staf Tim MWA WM 2017.
+					<span style="font-size: 1.5rem;"> <b>Selamat datang di portal rekrutmen terbuka Staf Magang Tim MWA WM 2017.
 							<br>
 							Mari bergabung dengan kami untuk merasakan dahsyatnya #ERANyata!</b> 
 					</span>
