tambah relasi cirebon

--- a/index.html
+++ b/index.html
@@ -168,10 +168,24 @@
 							<span class="card-title">Divisi Relasi Jatinangor</span>
 							<p>
 								Nah tidak hanya di ITB Ganesha. Buat teman-teman di ITB Jatinangor juga ada nih. Teman-teman di ITB Jatinangor juga bisa bergabung di Divisi Relasi Jatinangor. Divisi ini akan bekerja untuk menyampaikan segala informasi yang berkaitan tentang isu isu yang dibahas oleh MWA WM tentang ITB kepada mahasiswa di Jatinangor. Jadi, kami tunggu kamu di divisi ini.<br>
-								N.B.: diutamakan mahasiswa S1 ITB Jatinangor
+								N.B.: diutamakan mahasiswa ITB Jatinangor (FTI-J dan FTSL-J)
 							</p>
 							<span><b>
 								Apa yang akan kamu dapatkan di sini: relasi banyak, ketemu dan ngobrol banyak dengan massa himpunan ITB Jatinangor, <em>communication skill</em>, jalan-jalan GANECA-JATINANGOR sesering mungkin.
+							</b></span>
+						</div>
+					</div>
+				</div>
+				<div class="col s12">
+					<div class="card yellow lighten-2">
+						<div class="card-content black-text">
+							<span class="card-title">Divisi Relasi Jatinangor</span>
+							<p>
+								Selain Jatinangor dan Ganesha, tidak lupa juga untuk teman-teman di ITB Cirebon juga bisa bergabung di Divisi Relasi Cirebon. Divisi ini akan bekerja untuk menyampaikan segala informasi yang berkaitan tentang isu isu yang dibahas oleh MWA WM tentang ITB kepada mahasiswa Cirebon. Jadi, kami tunggu kamu di divisi ini.<br>
+								N.B.: diutamakan mahasiswa ITB Cirebon
+							</p>
+							<span><b>
+								Apa yang akan kamu dapatkan di sini: relasi banyak, <em>communication skill</em>, jalan-jalan GANECA-JATINANGOR sesering mungkin.
 							</b></span>
 						</div>
 					</div>
