--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				<div class="col s12">
 					<div class="card yellow lighten-2">
 						<div class="card-content black-text">
-							<span class="card-title">Divisi Relasi Jatinangor</span>
+							<span class="card-title">Divisi Relasi Cirebon</span>
 							<p>
 								Selain Jatinangor dan Ganesha, tidak lupa juga untuk teman-teman di ITB Cirebon juga bisa bergabung di Divisi Relasi Cirebon. Divisi ini akan bekerja untuk menyampaikan segala informasi yang berkaitan tentang isu isu yang dibahas oleh MWA WM tentang ITB kepada mahasiswa Cirebon. Jadi, kami tunggu kamu di divisi ini.<br>
 								N.B.: diutamakan mahasiswa ITB Cirebon
