hapus andat, kastrat, krevis

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col s12">
+				<!-- <div class="col s12">
 					<div class="card yellow darken-3">
 						<div class="card-content white-text">
 							<span class="card-title">Divisi Kajian Strategis</span>
@@ -256,7 +256,7 @@
 						</b></span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="col s12">
 					<div class="card orange darken-4">
 						<div class="card-content white-text">
@@ -284,7 +284,7 @@
 						
 					</div>
 				</div>
-				<div class="col s12">
+				<!-- <div class="col s12">
 					<div class="card orange darken-4">
 						<div class="card-content white-text">
 							<span class="card-title">Divisi Kreasi Visual</span>
@@ -296,7 +296,7 @@
 							</b></span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 			</div>
 			<div class="row">
