--- a/index-ttt.html
+++ b/index-ttt.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="msapplication-tap-highlight" content="no">
-	<meta name="description" content="Rekrutmen Terbuka Staf Tim MWA WM telah dibuka. Daftarkan dirimu dan rasakan ERANyata!">
-	<title>Rekrutmen Terbuka Staf Tim MWA WM 2017</title>
+	<meta name="description" content="Rekrutmen Terbuka Staf Magang Tim MWA WM telah dibuka. Daftarkan dirimu dan rasakan ERANyata!">
+	<title>Rekrutmen Terbuka Staf Magang Tim MWA WM 2017</title>
 
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="css/loader.min.css" rel="stylesheet" type="text/css">
@@ -35,17 +35,18 @@
 					<div class="title">
 						<h4 class="text-title center">
 							Rekrutmen Terbuka
-							<br>Staf Tim MWA WM 2017</h4>
+							<br>Staf Tim Magang MWA WM 2017</h4>
 					</div>
 				</div>
 			</div>
 			<div class="row center">
 				<div class="col s12">
-					<span style="font-size: 1.5rem;"> <b>Hai! Terima kasih telah berkunjung. Namun mohon maaf, rekrutmen terbuka resmi ditutup. Terima kasih atas partisipasinya dan kami tunggu kontribusi Anda lainnya.</b> 
+					<span style="font-size: 1.5rem;"> <b>Selamat datang di portal rekrutmen terbuka Staf Magang Tim MWA WM 2017.
+							<br>
+							Mari bergabung dengan kami untuk merasakan dahsyatnya #ERANyata!</b> 
 					</span>
 				</div>
 			</div>
-			<!---
 			<hr>
 			<div class="row">
 				<div class="col s12 center">
@@ -130,10 +131,6 @@
 					<label for="kesibukan" data-error="Field harus diisi">Kesibukan selama setahun kedepan</label>
 				</div>
 				<div class="input-field col s12 m12">
-					<textarea placeholder="" required aria-required="true" class="materialize-textarea" id="tentangmwawm" name="tentangmwawm"></textarea>
-					<label for="tentangmwawm" data-error="Field harus diisi">Apa yang kamu ketahui tentang MWA WM ITB?</label>
-				</div>
-				<div class="input-field col s12 m12">
 					<textarea placeholder="Tuliskan tentang diri kamu terutama kelebihan serta kekurangan kamu. Tidak dalam bentuk poin ya." required aria-required="true" class="materialize-textarea" id="tentangdiri" name="tentangdiri"></textarea>
 					<label for="tentangdiri" data-error="Field harus diisi">
 						Boleh menceritakan tentang diri kamu selain data yang sudah kamu isi di atas?
@@ -171,10 +168,24 @@
 							<span class="card-title">Divisi Relasi Jatinangor</span>
 							<p>
 								Nah tidak hanya di ITB Ganesha. Buat teman-teman di ITB Jatinangor juga ada nih. Teman-teman di ITB Jatinangor juga bisa bergabung di Divisi Relasi Jatinangor. Divisi ini akan bekerja untuk menyampaikan segala informasi yang berkaitan tentang isu isu yang dibahas oleh MWA WM tentang ITB kepada mahasiswa di Jatinangor. Jadi, kami tunggu kamu di divisi ini.<br>
-								N.B.: diutamakan mahasiswa S1 ITB Jatinangor
+								N.B.: diutamakan mahasiswa ITB Jatinangor (FTI-J dan FTSL-J)
 							</p>
 							<span><b>
 								Apa yang akan kamu dapatkan di sini: relasi banyak, ketemu dan ngobrol banyak dengan massa himpunan ITB Jatinangor, <em>communication skill</em>, jalan-jalan GANECA-JATINANGOR sesering mungkin.
+							</b></span>
+						</div>
+					</div>
+				</div>
+				<div class="col s12">
+					<div class="card yellow lighten-2">
+						<div class="card-content black-text">
+							<span class="card-title">Divisi Relasi Cirebon</span>
+							<p>
+								Selain Jatinangor dan Ganesha, tidak lupa juga untuk teman-teman di ITB Cirebon juga bisa bergabung di Divisi Relasi Cirebon. Divisi ini akan bekerja untuk menyampaikan segala informasi yang berkaitan tentang isu isu yang dibahas oleh MWA WM tentang ITB kepada mahasiswa Cirebon. Jadi, kami tunggu kamu di divisi ini.<br>
+								N.B.: diutamakan mahasiswa ITB Cirebon
+							</p>
+							<span><b>
+								Apa yang akan kamu dapatkan di sini: relasi banyak, <em>communication skill</em>, jalan-jalan GANECA-JATINANGOR sesering mungkin.
 							</b></span>
 						</div>
 					</div>
@@ -220,7 +231,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col s12">
+				<!-- <div class="col s12">
 					<div class="card yellow darken-3">
 						<div class="card-content white-text">
 							<span class="card-title">Divisi Kajian Strategis</span>
@@ -245,7 +256,7 @@
 						</b></span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="col s12">
 					<div class="card orange darken-4">
 						<div class="card-content white-text">
@@ -273,7 +284,7 @@
 						
 					</div>
 				</div>
-				<div class="col s12">
+				<!-- <div class="col s12">
 					<div class="card orange darken-4">
 						<div class="card-content white-text">
 							<span class="card-title">Divisi Kreasi Visual</span>
@@ -285,7 +296,7 @@
 							</b></span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 			</div>
 			<div class="row">
@@ -434,11 +445,6 @@
 			<div id="kesibukan-review"></div>
 			<br>
 			<span>
-				<strong>Apa yang kamu ketahui tentang MWA WM ITB?</strong>
-			</span>
-			<div id="tentangmwawm-review"></div>
-			<br>
-			<span>
 				<strong>Tentang diri kamu</strong>
 			</span>
 			<div id="tentangdiri-review"></div>
@@ -491,7 +497,7 @@
 	</div>
 
 	<form name="main-form" id="main-form" method="get" style="display: none"></form>
--->
+
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/particles.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui.sortable.min.js"></script>
